--- a/TemplateCards/template_01/index.html
+++ b/TemplateCards/template_01/index.html
@@ -1,49 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wedding Invitation</title>
 
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;600&display=swap"
       rel="stylesheet"
     />
+
     <link href="style.css" rel="stylesheet" />
+    <base href="http://localhost:8080/TemplateCards/" />
   </head>
 
   <body>
-    <div class="card">
-      <!-- Gold floral decorations from uploaded file -->
+    <div class="card-wrapper">
+      <!-- 🌸 FULL BORDER PNG FRAME -->
       <img
-        src="/mnt/data/fbd9a6de-ce34-4862-8ef1-7a9977714472.jpg"
-        class="top-floral"
+        src="template_01/images/flower-border.png"
+        class="flower-border"
+        alt="Floral Border"
       />
-      <img
-        src="/mnt/data/fbd9a6de-ce34-4862-8ef1-7a9977714472.jpg"
-        class="bottom-floral"
-      />
-      <!-- <img
-        src="/TemplateCards/template_01/images/flower.png"
-        class="side-floral left-floral"
-      /> -->
 
-      <div class="invite-text editable" contenteditable="true">
-        PLEASE JOIN US IN THE CELEBRATION OF OUR WEDDING
-      </div>
+      <div class="card">
+        <!-- Top floral decorative image -->
+        <img
+          src="template_01/images/flower.png"
+          class="top-floral"
+          alt="Floral Decoration"
+        />
 
-      <h1 class="names editable" contenteditable="true">Harper Russo</h1>
-      <div class="and">&amp;</div>
-      <h1 class="names editable" contenteditable="true">Margarita Perez</h1>
+        <div class="invite-text editable" data-editable="inviteText">
+          PLEASE JOIN US IN THE CELEBRATION OF OUR WEDDING
+        </div>
 
-      <div class="details">
-        <div class="editable" contenteditable="true">Save The Date</div>
-        <div class="editable" contenteditable="true">Sun, 10 July 2025</div>
-        <div class="editable" contenteditable="true">At 11:00 AM</div>
-        <br />
-        <div class="editable" contenteditable="true">
-          123 Anywhere St, Any City, ST 19215
+        <h1 class="names editable" data-editable="brideName">Harper Russo</h1>
+
+        <div class="and">&amp;</div>
+
+        <h1 class="names editable" data-editable="groomName">
+          Margarita Perez
+        </h1>
+
+        <div class="details">
+          <div class="editable" data-editable="saveTheDate">Save The Date</div>
+
+          <div class="editable" data-editable="eventDate">
+            Sun, 10 July 2025
+          </div>
+
+          <div class="editable" data-editable="eventTime">At 11:00 AM</div>
+
+          <br />
+
+          <div class="editable" data-editable="location">
+            123 Anywhere St, Any City, ST 19215
+          </div>
         </div>
       </div>
     </div>
