--- a/TemplateCards/template_02/index.html
+++ b/TemplateCards/template_02/index.html
@@ -1,86 +1,89 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>25th Anniversary — Invitation</title>
 
-    <!-- Google fonts used for elegant script + serif heading -->
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700;900&family=Montserrat:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
 
     <link href="style.css" rel="stylesheet" />
+    <base href="http://localhost:8080/TemplateCards/" />
   </head>
+
   <body>
-    <div class="invitation" id="invitation">
-      <!-- subtle texture using uploaded file (preview only) -->
-      <div class="texture" aria-hidden="true"></div>
+    <div class="card-wrapper">
+      <!-- 🌸 FULL FLOWER BORDER PNG -->
+      <img
+        src="template_02/images/flower-border.png"
+        class="flower-border"
+        alt="Floral Border"
+      />
 
-      <div class="header">
-        <div style="font-size: 20px; color: var(--accent)">
-          <strong>Michelle &amp; Daniel</strong>
+      <div class="invitation" id="invitation">
+        <div class="texture" aria-hidden="true"></div>
+
+        <div class="header">
+          <div
+            class="editable"
+            data-editable="shortNames"
+            style="font-size: 20px; color: var(--accent)"
+          >
+            <strong>Michelle & Daniel</strong>
+          </div>
+
+          <h1 class="couple-names editable" data-editable="mainNames">
+            Michelle & Daniel
+            <span class="surname editable" data-editable="surname">
+              Walker
+            </span>
+          </h1>
+
+          <div class="divider"></div>
+
+          <div class="big-title editable" data-editable="eventTitle">
+            25TH ANNIVERSARY
+          </div>
         </div>
-        <h1 class="couple-names">
-          Michelle &amp; Daniel <span class="surname">Walker</span>
-        </h1>
 
-        <div class="divider" aria-hidden></div>
+        <div class="date-row">
+          <div class="date-number editable" data-editable="dateNumber">24</div>
 
-        <div class="big-title">25TH ANNIVERSARY</div>
-      </div>
+          <div class="date-info">
+            <div class="line editable" data-editable="dateLine1">
+              <strong>THURSDAY, SEPTEMBER</strong>
+            </div>
 
-      <div class="date-row">
-        <div class="date-number">24</div>
-        <div class="date-info">
-          <div class="line"><strong>THURSDAY, SEPTEMBER</strong></div>
-          <div class="line">AT 8:00 PM</div>
-          <div class="line">500 LUXE LANE, LOS ANGELES</div>
+            <div class="line editable" data-editable="dateLine2">
+              AT 8:00 PM
+            </div>
+
+            <div class="line editable" data-editable="location">
+              500 LUXE LANE, LOS ANGELES
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="desc">
-        JOIN US FOR AN OPULENT NIGHT HONORING 25 YEARS OF LOVE AND COMMITMENT.
-      </div>
+        <div class="desc editable" data-editable="description">
+          JOIN US FOR AN OPULENT NIGHT HONORING 25 YEARS OF LOVE AND COMMITMENT.
+        </div>
 
-      <div class="ornament">
-        <!-- small ornamental flourish made in CSS using gradient lines -->
-        <svg
-          width="220"
-          height="18"
-          viewBox="0 0 220 18"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          aria-hidden
-        >
-          <path
-            d="M10 9 H105"
-            stroke="#e8c76a"
-            stroke-width="1.6"
-            stroke-linecap="round"
-          />
-          <path
-            d="M115 9 H210"
-            stroke="#e8c76a"
-            stroke-width="1.6"
-            stroke-linecap="round"
-          />
-          <circle cx="110" cy="9" r="3" fill="#e8c76a" />
-        </svg>
-      </div>
+        <div class="ornament">
+          <!-- Keep your SVG -->
+        </div>
 
-      <div class="rsvp">
-        <div style="font-weight: 600">RSVP BY 17 SEPTEMBER</div>
-        <div style="margin-top: 6px">WALKERS25@INVITATION.COM</div>
-      </div>
+        <div class="rsvp editable" data-editable="rsvp">
+          RSVP BY 17 SEPTEMBER<br />
+          WALKERS25@INVITATION.COM
+        </div>
 
-      <div class="footer-small">
-        Made with ♥ — Edit the text in this file to customize the invitation
+        <div class="footer-small editable" data-editable="footerNote">
+          Made with ♥ — Edit the text to customize
+        </div>
       </div>
     </div>
-
-    <!-- Small script to make some fields editable in-browser (optional) -->
-    <script src="script.js"></script>
   </body>
 </html>
