--- a/TemplateCards/template_04/index.html
+++ b/TemplateCards/template_04/index.html
@@ -4,41 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wedding Invitation</title>
-    <link rel="stylesheet" href="style.css" />
 
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="style.css" />
+    <base href="http://localhost:8080/TemplateCards/" />
   </head>
+
   <body>
-    <div class="invitation-card">
-      <div class="top-flowers">
-        <img src="https://i.imgur.com/Jpa9G0U.png" alt="flowers" />
-      </div>
+    <div class="card-wrapper">
+      <!-- Floral Border PNG -->
+      <img
+        src="template_04/images/border-flowers.png"
+        class="flower-border"
+        alt="Floral Border"
+      />
 
-      <div class="content">
-        <p class="small-text">TOGETHER WITH<br />THEIR FAMILIES</p>
+      <div class="invitation-card">
+        <div class="content">
+          <p class="small-text editable" data-editable="intro">
+            TOGETHER WITH<br />THEIR FAMILIES
+          </p>
 
-        <h1 class="names">Vicky & Damaris</h1>
+          <h1 class="names editable" data-editable="names">Vicky & Damaris</h1>
 
-        <p class="small-text">INVITE YOU TO CELEBRATE<br />THEIR MARRIAGE</p>
+          <p class="small-text editable" data-editable="inviteText">
+            INVITE YOU TO CELEBRATE<br />THEIR MARRIAGE
+          </p>
 
-        <div class="details-box">
-          <div class="left">SUNDAY<br />01:00 PM</div>
-          <div class="center">18</div>
-          <div class="right">OCTOBER<br />2025</div>
+          <div class="details-box">
+            <div class="left editable" data-editable="dayTime">
+              SUNDAY<br />01:00 PM
+            </div>
+
+            <div class="center editable" data-editable="date">18</div>
+
+            <div class="right editable" data-editable="monthYear">
+              OCTOBER<br />2025
+            </div>
+          </div>
+
+          <p class="small-text editable" data-editable="footerText">
+            INVITE YOU TO CELEBRATE<br />THEIR MARRIAGE
+          </p>
         </div>
-
-        <p class="small-text">INVITE YOU TO CELEBRATE<br />THEIR MARRIAGE</p>
-      </div>
-
-      <div class="bottom-flowers">
-        <img src="https://i.imgur.com/Kf4Jp6H.png" alt="flowers" />
       </div>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
