--- a/TemplateCards/template_02/index.html
+++ b/TemplateCards/template_02/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="card-wrapper">
-      <!-- 🌸 FULL FLOWER BORDER PNG -->
+      <!--  FULL FLOWER BORDER PNG -->
       <img
         src="template_02/images/flower-border.png"
         class="flower-border"
