--- a/TemplateCards/template_01/index.html
+++ b/TemplateCards/template_01/index.html
@@ -16,20 +16,20 @@
 
   <body>
     <div class="card-wrapper">
-      <!-- FULL BORDER PNG FRAME -->
-      <img
+      <!-- 🌸 FULL BORDER PNG FRAME -->
+      <!-- <img
         src="template_01/images/flower.png"
         class="flower-border"
         alt="Floral Border"
-      />
+      /> -->
 
       <div class="card">
         <!-- Top floral decorative image -->
-        <!-- <img
+        <img
           src="template_01/images/flower.png"
           class="top-floral"
           alt="Floral Decoration"
-        /> -->
+        />
 
         <div class="invite-text editable" data-editable="inviteText">
           PLEASE JOIN US IN THE CELEBRATION OF OUR WEDDING
