--- a/TemplateCards/template_02/index.html
+++ b/TemplateCards/template_02/index.html
@@ -27,13 +27,11 @@
         <div class="texture" aria-hidden="true"></div>
 
         <div class="header">
-          <div
-            class="editable"
-            data-editable="shortNames"
-            style="font-size: 20px; color: var(--accent)"
-          >
-            <strong>Michelle & Daniel</strong>
-          </div>
+          <img
+            src="template_02/images/flower-top.png"
+            class="flower-top"
+            alt="Top Floral"
+          />
 
           <h1 class="couple-names editable" data-editable="mainNames">
             Michelle & Daniel
