--- a/TemplateCards/template_01/index.html
+++ b/TemplateCards/template_01/index.html
@@ -54,6 +54,7 @@
 
           <br />
 
+          <div class="divider"></div>
           <div class="editable" data-editable="location">
             123 Anywhere St, Any City, ST 19215
           </div>
