--- a/TemplateCards/template_03/index.html
+++ b/TemplateCards/template_03/index.html
@@ -6,8 +6,10 @@
     <title>Wedding Invitation</title>
 
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Great+Vibes&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:wght@400;600&family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
 
@@ -17,13 +19,6 @@
 
   <body>
     <div class="card-wrapper">
-      <!-- Full Floral Border Frame -->
-      <img
-        src="template_03/images/flower-border.png"
-        class="flower-border"
-        alt="Floral Border"
-      />
-
       <div class="invitation-card">
         <!-- Background Flower -->
         <img
