--- a/TemplateCards/template_01/index.html
+++ b/TemplateCards/template_01/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="card-wrapper">
-      <!-- 🌸 FULL BORDER PNG FRAME -->
+      <!--  FULL BORDER PNG FRAME -->
 
       <div class="card">
         <img
